[gd_scene load_steps=2 format=3 uid="uid://bc812ofk4gq1u"]

[ext_resource type="Script" path="res://Game/MultiplayerController.gd" id="1_uxbfu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uxbfu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 109.0
offset_top = 82.0
offset_right = -109.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name
"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "IP Address:"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Port:"

[node name="LineEdit3" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "5632"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Host" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Host
"

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "join
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 138.0
offset_top = 40.0
offset_right = -138.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Players:"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Start" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Start
"

[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer2/Start" to="." method="_on_start_pressed"]
